--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@
     height: 85px;
     background-color: #755959;
     align-items: center;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .header-logo{
     grid-column: 1/2;
@@ -48,6 +50,48 @@ margin-top: 5px;
     width: 40px;
     grid-column: 3/4;
 }
+.header-nav{
+    position: absolute;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 150px;
+    margin-top: 30px;
+    background-color: rgba(255, 255, 255, .3);
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 74%;
+    border-radius: 10px;
+    display: none;
+}
+.header-nav:target{
+    display: initial;
+    position: absolute;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 150px;
+    margin-top: 30px;
+    background-color: rgba(255, 255, 255, .3);
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 74%;
+    border-radius: 10px;
+    
+}
+@media(min-width:666px){
+    .header-nav:target{
+        margin-left: 80%;
+    }
+}
+.header-nav__link{
+    border-bottom:2px solid #fff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+
 .carousel{
     margin-top: 30px;
     width: 346px;
@@ -65,6 +109,11 @@ margin-top: 5px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 15px;
+}
+.menu-h2{
+    font-size: 36px;
+    font-weight: 400;
 }
 .menu-container{
     width: 94%;
@@ -72,14 +121,19 @@ margin-top: 5px;
     justify-content: space-evenly;
     border-bottom: 2px solid #fff;
 }
+.menu-container__bebidas, .menu-container__platos, .menu-container__postres {
+    font-size: 18px;
+}
 a{
     text-decoration: none;
 }
 .menu-container__cards{
+    margin-top: 10px;
     width: 94%;
     background-color: #755959;
     overflow: auto;
-    height: 410px;
+    height: 411px;
+    padding-bottom: 10px;
 }
 .card{
     margin-top: 15px;
@@ -88,7 +142,69 @@ a{
     height: 76px;
     border-radius: 15px;
     background-color: #fff;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: #000;
+    align-items: center;
+    justify-content: center;
+}
+.card-img{
+grid-column: 1/2;
+height: 50px;
+border-radius: 50px;
+border: 1px solid #777;
+margin-left: 20px;
+}
+.card-h4{
+grid-column: 2/3;
+color: #000;
+}
+.card-p{
+grid-column: 3/4;
+color: #000;
+text-align: center;
 }
 .ubicacion{
-    width: ;
+    width: 94%;
+    background-color: #755959;
+    height: 500px;
+    margin-top: 60px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.ubicacion-h2{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 400;
+}
+.footer{
+    width: 100%;
+    background-color: #755959;
+    margin-top: 60px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.footer-contactos{
+grid-column: 1/2;
+}
+.footer-contacto__div{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-right: 2px solid #fff;
+}
+.footer-horarios{
+grid-column: 2/3;
+}
+.footer-horarios__h2, .footer-contacto__h2{
+    text-align: center;
+}
+.footer-horarios__div{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
