--- a/index.css
+++ b/index.css
@@ -55,30 +55,16 @@ margin-top: 5px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     height: 150px;
-    margin-top: 30px;
+    margin-top: 50px;
     background-color: rgba(255, 255, 255, .3);
     width: 100px;
     justify-content: center;
     align-items: center;
-    margin-left: 74%;
+    margin-left: 72%;
     border-radius: 10px;
     display: none;
 }
-.header-nav:target{
-    display: initial;
-    position: absolute;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 150px;
-    margin-top: 30px;
-    background-color: rgba(255, 255, 255, .3);
-    width: 100px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 74%;
-    border-radius: 10px;
-    
-}
+
 @media(min-width:666px){
     .header-nav:target{
         margin-left: 80%;
@@ -143,24 +129,21 @@ a{
     border-radius: 15px;
     background-color: #fff;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 3fr 1fr;
     color: #000;
     align-items: center;
     justify-content: center;
 }
-.card-img{
-grid-column: 1/2;
-height: 50px;
-border-radius: 50px;
-border: 1px solid #777;
-margin-left: 20px;
-}
+
 .card-h4{
-grid-column: 2/3;
+grid-column: 1/2;
+font-size: 24px;
+font-weight: 700;
 color: #000;
+margin: 0 auto;
 }
 .card-p{
-grid-column: 3/4;
+grid-column: 2/3;
 color: #000;
 text-align: center;
 }
@@ -207,4 +190,20 @@ grid-column: 2/3;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+.a{ 
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-left: solid 4px #000;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #fff;
+}
+.triangulo{
+    width: 30px;
+    height: 30px;
 }
