--- a/index.css
+++ b/index.css
@@ -121,6 +121,7 @@ text-align: center;
     text-align: center;
     background: none;
     opacity: 50%;
+    z-index: 1;
 }
 .carousel__anterior{
     z-index: 100;
