--- a/nav-comp/nav.css
+++ b/nav-comp/nav.css
@@ -52,11 +52,14 @@ margin-top: 5px;
     margin-left: 72%;
     border-radius: 10px;
     display: none;
+    z-index: 1000;
 }
 
 @media(min-width:666px){
-    .header-nav:target{
-        margin-left: 80%;
+    .header-nav{
+        right: 30px;
+        height: 200px;
+        width: 120px;
     }
 }
 .header-nav__link{
@@ -65,6 +68,24 @@ margin-top: 5px;
     padding: 5px;
     border-radius: 5px;
 }
+@media(min-width:666px){
+    .header-nav__link{
+        font-size: 20px;
+    }
+    .header-nav__link:last-of-type{
+        margin-bottom: 10px;
+    }
+}
 .header-nav__close{
-    margin-left: 65px;
+    width: 20px;
+        height: 20px;
+        margin-left: 65px;
+}
+@media(min-width:666px){
+    .header-nav__close{
+        width: 30px;
+        height: 30px;
+        margin-left: 68px;
+    }
+    
 }
