--- a/nav-comp/nav.css
+++ b/nav-comp/nav.css
@@ -38,7 +38,34 @@ margin-top: 5px;
     width: 40px;
     grid-column: 3/4;
 }
-
+@media(min-width:900px){
+    .header-icono{
+        display: none;
+    }
+    }
+.header-nav__primario{
+    width: 350px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+@media(max-width:900px){
+    .header-nav__primario{
+        display: none;
+    }
+    }
+.header-nav__primario-link{
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 500;
+}
+.header-nav__primario-link:hover{
+    background-color: rgba(255, 255, 255, .5);
+    color: #755959;
+}
 .header-nav{
     position: absolute;
     top: 70px;
@@ -47,6 +74,7 @@ margin-top: 5px;
     bottom: 0;
     display: grid;
     grid-template-rows:1fr 1fr 1fr 1fr;
+    gap: 15px;
     margin-top: 30px;
     background-color: #755959;
      justify-content: center;
@@ -71,9 +99,15 @@ margin-top: 5px;
     font-size: 35px;
     font-weight: 500;
 }
+.header-nav__link:first-of-type{
+    margin-top: 90px;
+}
 @media(min-width:666px){
     .header-nav__link{
         font-size: 20px;
+    }
+    .header-nav__link:first-of-type{
+        margin-top: 0;
     }
     .header-nav__link:last-of-type{
         margin-bottom: 10px;
