--- a/index.css
+++ b/index.css
@@ -62,14 +62,14 @@ a{
     }
 }
 .card{
-    margin-top: 15px;
+    margin:15px auto;
     margin-bottom: 0;
-    width: 100%;
+    width: 95%;
     height: 76px;
     border-radius: 15px;
     background-color: #fff;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
+    display: flex;
+    flex-direction: row;
     color: #000;
     align-items: center;
     justify-content: center;
@@ -87,14 +87,21 @@ a{
     }
 }
 .card-h4{
-grid-column: 1/2;
+grid-column: 2/3;
 font-size: 24px;
 font-weight: 700;
 color: #000;
 margin: 0 auto;
 }
+.card__img{
+    grid-column: 1/2;
+    width: 70px;
+    height: 70px;
+    border-radius: 50px;
+    border: 4px solid #755959;
+}
 .card-p{
-grid-column: 2/3;
+grid-column: 3/4;
 color: #000;
 text-align: center;
 }
@@ -103,7 +110,7 @@ text-align: center;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 30%;
     border-left: solid 4px #755959;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
