--- a/index.css
+++ b/index.css
@@ -24,6 +24,12 @@
     align-items: center;
     border-radius: 15px;
 }
+@media(min-width:666px){
+    .menu{
+        margin-top: 130px;
+        
+    }
+}
 .menu-h2{
     font-size: 36px;
     font-weight: 400;
@@ -76,6 +82,8 @@ a{
 }
 @media(min-width:900px){
     .card{
+        position: relative;
+        z-index: 100;
         display: flex;
         margin-top: 15px;
         margin-bottom: 0;
@@ -93,12 +101,55 @@ font-weight: 700;
 color: #000;
 margin: 0 auto;
 }
+@media(min-width:900px){
+    .card-h4{
+        text-align: center;
+        position: absolute;
+        z-index: 100;
+        padding-top: 20px;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0, .4);
+        border: 4px solid #fff;
+        border-radius: 15px;
+        font-size: 28px;
+        font-weight: 700;
+        color: #fff;
+       
+        }
+}
+.card__descripcion{
+    display: none;
+}
+@media(min-width:900px){
+    .card__descripcion{
+       
+    display: inherit;
+        position: absolute;
+        z-index: 200;
+        font-size: 24px;
+        color: #fff;
+    }
+}
+
 .card__img{
     grid-column: 1/2;
     width: 70px;
     height: 70px;
     border-radius: 50px;
     border: 4px solid #755959;
+    margin-left: 3px;
+}
+@media(min-width:900px){
+    .card__img{
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+        height: 330px;
+        border-radius: 15px;
+        
+    }
 }
 .card-p{
 grid-column: 3/4;
