--- a/index.css
+++ b/index.css
@@ -26,7 +26,13 @@
 }
 @media(min-width:666px){
     .menu{
-        margin-top: 130px;
+        margin-top: 250px;
+        
+    }
+}
+@media(min-width:900px){
+    .menu{
+        margin-top: 50px;
         
     }
 }
@@ -88,11 +94,12 @@ a{
         margin-top: 15px;
         margin-bottom: 0;
         width: 20%;
+        min-width: 190px;
         height: 330px;
         border-radius: 15px;
         background-color: #fff;
         color: #000;
-    }
+     }
 }
 .card-h4{
 grid-column: 2/3;
@@ -110,29 +117,50 @@ margin: 0 auto;
         display: inline-block;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0, .4);
         border: 4px solid #fff;
         border-radius: 15px;
         font-size: 28px;
         font-weight: 700;
         color: #fff;
-       
-        }
+       }
+     
 }
 .card__descripcion{
     display: none;
 }
 @media(min-width:900px){
     .card__descripcion{
-       
-    display: inherit;
+        width: 90%px;
+        min-width: 190px;
+        height: 90%;
+        padding-top: 80px;
+        text-align: center;
+        display: inherit;
         position: absolute;
         z-index: 200;
-        font-size: 24px;
+        font-size: 22px;
         color: #fff;
     }
+  
 }
-
+.card__link-full{
+    display: none;
+}
+@media(min-width:900px){
+    .card__link-full{
+       text-align: center;
+        display: inherit;
+        position: absolute;
+        z-index: 300;
+        font-size: 22px;
+        width: 120px;
+        padding-left: 5px;
+        background-color: #755959;
+        border-radius: 5px;
+        color: #fff;
+        bottom: 25px;
+    }
+}
 .card__img{
     grid-column: 1/2;
     width: 70px;
