--- a/index.css
+++ b/index.css
@@ -115,6 +115,7 @@ margin: 0 auto;
         z-index: 100;
         padding-top: 20px;
         display: inline-block;
+        background-color: rgba(0, 0, 0, .4);
         width: 100%;
         height: 100%;
         border: 4px solid #fff;
@@ -160,6 +161,10 @@ margin: 0 auto;
         color: #fff;
         bottom: 25px;
     }
+    .card__link-full:hover{
+        background-color: #fff;
+        color: #755959;
+    }
 }
 .card__img{
     grid-column: 1/2;
@@ -204,22 +209,7 @@ text-align: center;
     width: 30px;
     height: 30px;
 }
-.ubicacion{
-    width: 94%;
-    background-color: #755959;
-    height: 500px;
-    margin-top: 60px;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.ubicacion-h2{
-    text-align: center;
-    font-size: 36px;
-    font-weight: 400;
-}
+
 .footer-cont{
     width: 100%;
 }
