--- a/aperitivos.css
+++ b/aperitivos.css
@@ -8,5 +8,186 @@ a{
     text-decoration: none;
 }
 .container{
-    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    align-items: center;
+}
+.contenedor{
+    width: 100%;
+}
+.menu{
+    margin-top: 30px;
+  
+    width: 94%;
+    background-color: #755959;
+ }
+ .menu__opciones{
+     width: 100%;
+     display: grid;
+     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-rows: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+ .menu__opciones-h3{
+     grid-row: 1/2;
+     grid-column: 1/span6;
+     text-align: center;
+     font-size: 36px;
+     font-weight: 400;
+ }
+ .menu__opciones-link{
+     text-align: center;
+     grid-row: 2/3;
+     font-size: 18px;
+     
+ }
+.menu__aperitivos{
+    width: auto;
+background-color: #755959;
+display: flex;
+flex-direction: row;
+overflow-y:hidden ;
+overflow-x: auto;
+flex-wrap: nowrap;
+justify-content: center;
+align-items: center;
+}
+.menu__aperitivos-sub{
+    
+    flex: 0 0 auto;
+    margin-left: 50px;
+    width: 100%;
+    border: 1px solid #fff;
+    background-color: #755959;
+    margin-bottom: 15px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows:60px repeat(1fr) ;
+}
+.menu__aperitivos-sub:first-of-type{
+    margin-left: 343%;
+}
+.menu__aperitivos-sub--titulo{
+    grid-column: 1/span3;
+    margin-top: 5px;
+    height: 20px;
+    margin-bottom: 15px;
+}
+
+.card{
+    margin-top: 50px;
+    width: 150px;
+    height: 200px;
+    border-radius: 15px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    color: #000;
+    align-items: center;
+    justify-content: center;
+}
+@media(min-width:900px){
+    .card{
+        position: relative;
+        z-index: 100;
+        display: flex;
+        margin-top: 15px;
+        margin-bottom: 0;
+        width: 20%;
+        min-width: 190px;
+        height: 330px;
+        border-radius: 15px;
+        background-color: #fff;
+        color: #000;
+     }
+}
+.card-h4{
+grid-column: 2/3;
+font-size: 24px;
+font-weight: 700;
+color: #000;
+margin: 0 auto;
+}
+@media(min-width:900px){
+    .card-h4{
+        text-align: center;
+        position: absolute;
+        z-index: 100;
+        padding-top: 20px;
+        display: inline-block;
+        background-color: rgba(0, 0, 0, .4);
+        width: 100%;
+        height: 100%;
+        border: 4px solid #fff;
+        border-radius: 15px;
+        font-size: 28px;
+        font-weight: 700;
+        color: #fff;
+       }
+     
+}
+.card__descripcion{
+    display: none;
+}
+@media(min-width:900px){
+    .card__descripcion{
+        width: 90%px;
+        min-width: 190px;
+        height: 90%;
+        padding-top: 80px;
+        text-align: center;
+        display: inherit;
+        position: absolute;
+        z-index: 200;
+        font-size: 22px;
+        color: #fff;
+    }
+  
+}
+.card__link-full{
+    display: none;
+}
+@media(min-width:900px){
+    .card__link-full{
+       text-align: center;
+        display: inherit;
+        position: absolute;
+        z-index: 300;
+        font-size: 22px;
+        width: 120px;
+        padding-left: 5px;
+        background-color: #755959;
+        border-radius: 5px;
+        color: #fff;
+        bottom: 25px;
+    }
+    .card__link-full:hover{
+        background-color: #fff;
+        color: #755959;
+    }
+}
+.card__img{
+    grid-column: 1/2;
+    width: 70px;
+    height: 70px;
+    border-radius: 50px;
+    border: 4px solid #755959;
+    margin-left: 3px;
+}
+@media(min-width:900px){
+    .card__img{
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+        height: 330px;
+        border-radius: 15px;
+        
+    }
+}
+.card-p{
+grid-column: 3/4;
+color: #000;
+text-align: center;
 }
