--- a/aperitivos.css
+++ b/aperitivos.css
@@ -18,8 +18,8 @@ a{
 }
 .menu{
     margin-top: 30px;
-  
-    width: 94%;
+    border-radius: 5px;
+    width: 100%;
     background-color: #755959;
  }
  .menu__opciones{
@@ -44,7 +44,7 @@ a{
      
  }
 .menu__aperitivos{
-    width: auto;
+width: 100%;
 background-color: #755959;
 display: flex;
 flex-direction: row;
@@ -55,21 +55,23 @@ justify-content: center;
 align-items: center;
 }
 .menu__aperitivos-sub{
-    
     flex: 0 0 auto;
     margin-left: 50px;
-    width: 100%;
-    border: 1px solid #fff;
+    width: 98%;
+    border-radius: 5px;
+    border: 4px solid #fff;
     background-color: #755959;
     margin-bottom: 15px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 180px));
     grid-template-rows:60px repeat(1fr) ;
+    justify-content: center;
 }
 .menu__aperitivos-sub:first-of-type{
-    margin-left: 343%;
+    margin-left: 334%;
 }
 .menu__aperitivos-sub--titulo{
+    text-align: center;
     grid-column: 1/span3;
     margin-top: 5px;
     height: 20px;
@@ -77,16 +79,16 @@ align-items: center;
 }
 
 .card{
-    margin-top: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     width: 150px;
     height: 200px;
     border-radius: 15px;
     background-color: #fff;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     color: #000;
     align-items: center;
-    justify-content: center;
 }
 @media(min-width:900px){
     .card{
@@ -104,8 +106,8 @@ align-items: center;
      }
 }
 .card-h4{
-grid-column: 2/3;
-font-size: 24px;
+    text-align: center;
+font-size: 20px;
 font-weight: 700;
 color: #000;
 margin: 0 auto;
@@ -129,7 +131,10 @@ margin: 0 auto;
      
 }
 .card__descripcion{
-    display: none;
+    margin-top: 5px;
+   font-size: 14px;
+   color: #000;
+   text-align: center;
 }
 @media(min-width:900px){
     .card__descripcion{
@@ -145,6 +150,17 @@ margin: 0 auto;
         color: #fff;
     }
   
+}
+.card__precio{
+    margin-top: 5px;
+    color: #000;
+    font-size: 18px;
+    font-weight: 700;
+}
+.card__precio-span{
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
 }
 .card__link-full{
     display: none;
@@ -169,7 +185,7 @@ margin: 0 auto;
     }
 }
 .card__img{
-    grid-column: 1/2;
+    margin-top: 5px;
     width: 70px;
     height: 70px;
     border-radius: 50px;
@@ -190,4 +206,8 @@ margin: 0 auto;
 grid-column: 3/4;
 color: #000;
 text-align: center;
+}
+
+.footer-cont{
+    width: 100%;
 }
