--- a/aperitivos.css
+++ b/aperitivos.css
@@ -131,6 +131,7 @@ margin: 0 auto;
      
 }
 .card__descripcion{
+    display: none;
     margin-top: 5px;
    font-size: 14px;
    color: #000;
@@ -152,7 +153,7 @@ margin: 0 auto;
   
 }
 .card__precio{
-    margin-top: 5px;
+    margin-top: 15px;
     color: #000;
     font-size: 18px;
     font-weight: 700;
@@ -163,7 +164,10 @@ margin: 0 auto;
     font-weight: 700;
 }
 .card__link-full{
-    display: none;
+    color: #755959;
+    font-size: 14px;
+    font-weight: 700;
+    margin-top: 10px;
 }
 @media(min-width:900px){
     .card__link-full{
