--- a/aperitivos.css
+++ b/aperitivos.css
@@ -82,13 +82,14 @@ align-items: center;
     margin-top: 25px;
     margin-bottom: 25px;
     width: 150px;
-    height: 200px;
+    height: 250px;
     border-radius: 15px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     color: #000;
     align-items: center;
+    justify-content: space-evenly;
 }
 @media(min-width:900px){
     .card{
@@ -110,7 +111,7 @@ align-items: center;
 font-size: 20px;
 font-weight: 700;
 color: #000;
-margin: 0 auto;
+
 }
 @media(min-width:900px){
     .card-h4{
@@ -132,10 +133,12 @@ margin: 0 auto;
 }
 .card__descripcion{
     display: none;
-    margin-top: 5px;
    font-size: 14px;
    color: #000;
    text-align: center;
+}
+.card__descripcion:target{
+    display: inherit;
 }
 @media(min-width:900px){
     .card__descripcion{
@@ -153,7 +156,7 @@ margin: 0 auto;
   
 }
 .card__precio{
-    margin-top: 15px;
+    
     color: #000;
     font-size: 18px;
     font-weight: 700;
@@ -167,7 +170,7 @@ margin: 0 auto;
     color: #755959;
     font-size: 14px;
     font-weight: 700;
-    margin-top: 10px;
+    
 }
 @media(min-width:900px){
     .card__link-full{
@@ -189,11 +192,11 @@ margin: 0 auto;
     }
 }
 .card__img{
-    margin-top: 5px;
-    width: 70px;
+    
+    width: 90%;
     height: 70px;
-    border-radius: 50px;
-    border: 4px solid #755959;
+    border-radius: 20px;
+    border: 2px solid #755959;
     margin-left: 3px;
 }
 @media(min-width:900px){
