--- a/aperitivos.css
+++ b/aperitivos.css
@@ -43,16 +43,23 @@ a{
      font-size: 18px;
      
  }
-
+ 
+.card__cont{
+    display: flex;
+    flex-direction: row;
+    overflow-y:auto ;
+    background-image: url(./imagenes/abstract-luxury-blur-grey-color-gradient-used-as-background-studio-wall-for-display-your-products_1280x720.jpg);
+}
 
 .card{
+    flex: 0 0 auto;
     margin-top: 25px;
+    margin-left: 15px;
     margin-bottom: 25px;
-    width: 150px;
-    height: 250px;
+    width: 375px;
+    height: 350px;
     border-radius: 15px;
-    background-color: #fff;
-    display: flex;
+   display: flex;
     flex-direction: column;
     color: #000;
     align-items: center;
@@ -75,7 +82,7 @@ a{
 }
 .card-h4{
     text-align: center;
-font-size: 20px;
+font-size: 24px;
 font-weight: 700;
 color: #000;
 
@@ -99,14 +106,12 @@ color: #000;
      
 }
 .card__descripcion{
-    display: none;
-   font-size: 14px;
+   font-size: 18px;
+   width: 300px;
    color: #000;
    text-align: center;
 }
-.card__descripcion:target{
-    display: inherit;
-}
+
 @media(min-width:900px){
     .card__descripcion{
         width: 90%px;
@@ -123,9 +128,8 @@ color: #000;
   
 }
 .card__precio{
-    
     color: #000;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 700;
 }
 .card__precio-span{
@@ -159,11 +163,10 @@ color: #000;
     }
 }
 .card__img{
-    
+    box-shadow: 10px;
     width: 90%;
-    height: 70px;
+    height: 150px;
     border-radius: 20px;
-    border: 2px solid #755959;
     margin-left: 3px;
 }
 @media(min-width:900px){
