--- a/footer-comp/footer.css
+++ b/footer-comp/footer.css
@@ -1,36 +1,24 @@
 .footer{
     width: 100%;
-    background-color: #755959;
-    margin-top: 60px;
+    height: 300px;
+    background-color: #fff;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-rows: 50px 1fr 1fr 1fr;
+
 }
-.footer-contactos{
-grid-column: 1/2;
+.footer-contacto__h2{
+    grid-row: 1/2;
+    font-size: 36px;
+    font-weight: 700;
 }
-.footer-contacto__div{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-right: 2px solid #fff;
+.footer-contacto__telefonos{
+    grid-row: 2/3;
 }
-.footer-contacto__div--link{
-    padding-left: 10px;
-}
-@media(min-width:900px){
-    .footer-contacto__div--link{
-        margin-left: 40%;
-    }
+.footer-contacto__redes{
+    grid-row: 3/4;
 }
 .footer-horarios{
-grid-column: 2/3;
-}
-.footer-horarios__h2, .footer-contacto__h2{
-    text-align: center;
-}
-.footer-horarios__div{
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+   grid-row: 4/5 ;
 }
