--- a/index.css
+++ b/index.css
@@ -2,7 +2,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: #fff;
+    color: #755959;
+}
+a{
+    text-decoration: none
 }
 .container{
     display: flex;
@@ -15,202 +18,132 @@
 }
 
 .menu{
-    margin-top: 60px;
-    width: 94%;
-    background-color: #755959;
+   
+    width: 100%;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    height: 560px;
+  
 }
 @media(min-width:666px){
     .menu{
         margin-top: 250px;
-        
     }
 }
 @media(min-width:900px){
     .menu{
         margin-top: 50px;
-        
     }
+}
+.menu__sub-menus{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border-top: 2px solid #755959;
+    border-bottom: 2px solid #755959;
+    height: 40px;
+    align-items: center;
+}
+.menu__aperitivos{
+    width: 375px;
+    height: 450px;
+    display: flex;
+    margin-bottom: 15px;
+    flex-direction: row;
+    overflow-y:auto ; 
+}
+.menu__aperitivos-sub{
+    flex: 0 0 auto;
+    width: 375px;
+    font-size: 16px;
+}
+.menu__img{
+   margin-top: 15px;
+   margin-bottom: 15px;
+   border: 2px solid #755959;
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  border-radius: 5px;
+
+}
+.menu__numero{
+    display: inline;
+    font-size: 26px;
+    font-weight: 700;
+     margin-left: 15px;
+}
+.menu__aperitivos-sub-titulo{
+    display: inline;
+    font-size: 24px;
+    font-weight: 500;
+}
+.menu__descripcion{
+    width: 350px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.menu__link{
+    height: 55px;
+    width: 250px;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 15px;
+    border: 4px solid #755959;
+    margin-bottom: 5px;
+    padding-top: 8px;
+    text-align: center;
 }
 .menu-h2{
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 700;
 }
-.menu-container{
-    width: 94%;
-    display: flex;
-    justify-content: space-evenly;
-    border-bottom: 2px solid #fff;
-}
-.menu-container__bebidas, .menu-container__platos, .menu-container__postres {
-    font-size: 18px;
-}
-a{
-    text-decoration: none;
-}
-.menu-container__cards{
-    margin-top: 10px;
-    width: 94%;
-    background-color: #755959;
-    overflow: auto;
-    height: 411px;
-    padding-bottom: 10px;
-}
-@media(min-width:900px){
-    .menu-container__cards{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        margin-top: 10px;
-        width: 94%;
-        background-color: #755959;
-        overflow: auto;
-        height: 411px;
-        padding-bottom: 10px;
-    }
-}
-.card{
-    margin:15px auto;
-    margin-bottom: 0;
-    width: 95%;
-    height: 76px;
-    border-radius: 15px;
-    background-color: #fff;
-    display: flex;
-    flex-direction: row;
-    color: #000;
-    align-items: center;
-    justify-content: center;
-}
-@media(min-width:900px){
-    .card{
-        position: relative;
-        z-index: 100;
-        display: flex;
-        margin-top: 15px;
-        margin-bottom: 0;
-        width: 20%;
-        min-width: 190px;
-        height: 330px;
-        border-radius: 15px;
-        background-color: #fff;
-        color: #000;
-     }
-}
-.card-h4{
-grid-column: 2/3;
-font-size: 24px;
-font-weight: 700;
-color: #000;
-margin: 0 auto;
-}
-@media(min-width:900px){
-    .card-h4{
-        text-align: center;
-        position: absolute;
-        z-index: 100;
-        padding-top: 20px;
-        display: inline-block;
-        background-color: rgba(0, 0, 0, .4);
-        width: 100%;
-        height: 100%;
-        border: 4px solid #fff;
-        border-radius: 15px;
-        font-size: 28px;
-        font-weight: 700;
-        color: #fff;
-       }
-     
-}
-.card__descripcion{
-    display: none;
-}
-@media(min-width:900px){
-    .card__descripcion{
-        width: 90%px;
-        min-width: 190px;
-        height: 90%;
-        padding-top: 80px;
-        text-align: center;
-        display: inherit;
-        position: absolute;
-        z-index: 200;
-        font-size: 22px;
-        color: #fff;
-    }
+.img-cont{
+    width: 100%;
+    height: 470px;
+   background-image: url(./imagenes/cafe-divisor-1.jpg);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
   
 }
-.card__link-full{
-    display: none;
-}
-@media(min-width:900px){
-    .card__link-full{
-       text-align: center;
-        display: inherit;
-        position: absolute;
-        z-index: 300;
-        font-size: 22px;
-        width: 120px;
-        padding-left: 5px;
-        background-color: #755959;
-        border-radius: 5px;
-        color: #fff;
-        bottom: 25px;
-    }
-    .card__link-full:hover{
-        background-color: #fff;
-        color: #755959;
-    }
-}
-.card__img{
-    grid-column: 1/2;
-    width: 70px;
-    height: 70px;
-    border-radius: 50px;
-    border: 4px solid #755959;
-    margin-left: 3px;
-}
-@media(min-width:900px){
-    .card__img{
-        position: absolute;
-        z-index: 10;
-        width: 100%;
-        height: 330px;
-        border-radius: 15px;
-        
-    }
-}
-.card-p{
-grid-column: 3/4;
-color: #000;
+.img-cont__p{
+height: 75px;
+width: 350px;
+border-radius: 5px;
+background-color: rgba(255,255,255, .7);
+font-size: 24px;
+font-weight: 700;
 text-align: center;
 }
-.a{ 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 30%;
-    border-left: solid 4px #755959;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #fff;
+.img-cont-2{
+    width: 100%;
+    height: 470px;
+   background-image: url(./imagenes/cafe-divisor-2.jpg);
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
-@media(min-width:900px){
-    .a{ 
-       display: none;
-    }
+.img-cont-2__p{
+    height: 75px;
+    width: 350px;
+    border-radius: 5px;
+    background-color: rgba(255,255,255, .7);
+    font-size: 24px;
+    font-weight: 700;
+    text-align: center;
 }
-.triangulo{
-    width: 30px;
-    height: 30px;
-}
-
 .footer-cont{
     width: 100%;
 }
-
