--- a/nav-comp/nav.css
+++ b/nav-comp/nav.css
@@ -3,10 +3,8 @@
     grid-template-columns: 1fr 2fr 1fr;
     width: 100%;
     height: 85px;
-    background-color: #755959;
+    background-color: #fff;
     align-items: center;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
 }
 .header-logo{
     grid-column: 1/2;
@@ -76,12 +74,13 @@ margin-top: 5px;
     grid-template-rows:1fr 1fr 1fr 1fr;
     gap: 15px;
     margin-top: 30px;
-    background-color: #755959;
-     justify-content: center;
+    background-color: #fff;
+     justify-content: space-evenly;
     align-items: center;
     border-radius: 10px;
     display: none;
     z-index: 1000;
+    border-bottom: 4px solid #755959;
 }
 
 @media(min-width:666px){
@@ -92,16 +91,14 @@ margin-top: 5px;
     }
 }
 .header-nav__link{
-    border-bottom:2px solid #fff;
+    border-bottom:2px solid #755959;
     text-align: center;
     padding: 5px;
     border-radius: 5px;
     font-size: 35px;
     font-weight: 500;
 }
-.header-nav__link:first-of-type{
-    margin-top: 90px;
-}
+
 @media(min-width:666px){
     .header-nav__link{
         font-size: 20px;
