--- a/ubicacion-comp/ubicacion.css
+++ b/ubicacion-comp/ubicacion.css
@@ -1,19 +1,14 @@
 .ubicacion{
-    margin-left: auto;
-    margin-right: auto;
-    width: 94%;
-    background-color: #755959;
-    height: 500px;
-    margin-top: 60px;
-    border-radius: 15px;
+    width: 100%;
+    height: 570px;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+   align-items: center;
 }
 .ubicacion-cont{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 375px;
 }
 @media(min-width:900px){
     .ubicacion-cont{
@@ -23,10 +18,10 @@
        }
 }
 .ubicacion-h2{
-    grid-row: 1/2;
+    margin-top: 10px;
     text-align: center;
     font-size: 36px;
-    font-weight: 400;
+    font-weight: 700;
 }
 @media(min-width:900px){
     .ubicacion-h2{
@@ -39,8 +34,9 @@
 }
 
 .ubicacion__iframe{
-    width: 100%;
-    height: 75%;
+    margin-top: 30px;
+    border: 4px solid #755959;
+    height: 85%;
 }
 @media(min-width:900px){
     .ubicacion__iframe{
