--- a/footer-comp/footer.css
+++ b/footer-comp/footer.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 300px;
+    height: 350px;
     background-color: #fff;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -12,6 +12,31 @@
     grid-row: 1/2;
     font-size: 36px;
     font-weight: 700;
+    text-align: center;
+}
+.footer-contacto__telefono-h3,
+.footer-contacto__redes-h3, 
+.footer-horarios__h3{
+    font-size: 24px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+.footer-contecto__telefono-icon,
+.footer-contecto__redes-icon{
+    display: inline;
+    margin-left: 20px;
+}
+.footer-contacto__telefono-link,
+.footer-contacto__redes-link{
+    display: inline;
+    font-size: 16px;
+    
+}
+.footer-contacto__telefonos, 
+.footer-contacto__redes,
+.footer-horarios{
+    margin-left: 15px;
 }
 .footer-contacto__telefonos{
     grid-row: 2/3;
@@ -21,4 +46,13 @@
 }
 .footer-horarios{
    grid-row: 4/5 ;
+}
+.footer-contecto__icon{
+margin-left: 20px;
+}
+.footer-horarios__horario:last-of-type{
+    margin-left: 50px;
+}
+.footer-horarios__horario{
+    display: inline;
 }
