--- a/index.css
+++ b/index.css
@@ -65,13 +65,10 @@ a{
 .menu__fake{
     margin-top: 35px;
     position: relative;
-    background-color:#fff;
+    visibility: hidden;
     width: 100%;
     height: 400px;
-    display: flex;
-    margin-bottom: 30px;
-    flex-direction: row;
-    overflow-y:auto ; 
+   
     z-index: 50;
 }
 .menu__principales{
