--- a/index.css
+++ b/index.css
@@ -19,18 +19,19 @@ a{
 
 .menu{
    width: 100%;
-    background-color: #fff;
+    background-color:#fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
-@media(min-width:666px){
+@media(min-width:640px){
     .menu{
         height: 120vh;
     }
 }
+
 @media(min-width:900px){
     .menu{
         margin-top: 50px;
@@ -58,17 +59,18 @@ a{
     width: 100%;
     height: 60%;
     display: flex;
-    margin-bottom: 30px;
+    margin-top: 20px;
     flex-direction: row;
     overflow-y:auto ; 
 }
-@media(min-width:666px){
+@media(min-width:640px){
     .menu__aperitivos,
     .menu__principales,
     .menu__bebidas,
     .menu__postres{
-        margin-top: 50px;
-        height: 60%;
+        height: 70%;
+        margin-top: 40px;
+        margin-bottom: 10px;
     }
 }
 
@@ -77,7 +79,7 @@ a{
     position: relative;
     visibility: hidden;
     width: 100%;
-    height: 400px;
+    height: 350px;
     z-index: 50;
 }
 .menu__principales{
@@ -98,23 +100,66 @@ a{
     width: 375px;
     font-size: 16px;
 }
-.menu__img{
+@media(min-width:640px){
+    .menu__aperitivos-sub,
+    .menu__bebidas-sub,
+    .menu__principales-sub,
+    .menu__postres-sub{
+        width: 100%;
+        font-size: 16px;
+        height: 90%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      
+    }
+}
+.menu__img-aperitivos,
+.menu__img-bebidas,
+.menu__img-principales,
+.menu__img-postres{
    margin-top: 15px;
    margin-bottom: 15px;
    border: 2px solid #755959;
    display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 50%;
   height: 50%;
   border-radius: 5px;
-
 }
-.menu__numero{
+@media(min-width:640px){
+    .menu__img-aperitivos,
+    .menu__img-bebidas,
+    .menu__img-principales,
+    .menu__img-postres{
+        grid-column: 1/2;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 70%;
+        width: 70%;
+        margin-bottom: 0;
+    }
+}
+.menu__numero-aperitivos,
+.menu__numero-bebidas,
+.menu__numero-principales,
+.menu__numero-postres{
     display: inline;
     font-size: 26px;
     font-weight: 700;
      margin-left: 40px;
+}
+@media(min-width:640px){
+    .menu__numero-aperitivos,
+    .menu__numero-bebidas,
+    .menu__numero-principales,
+    .menu__numero-postres{
+        grid-row: 1/2;
+        grid-column: 2/3;
+        display: inline;
+        margin-left: 0;
+    }
 }
 .menu__aperitivos-sub-titulo,
 .menu__bebidas-sub-titulo,
@@ -124,10 +169,34 @@ a{
     font-size: 24px;
     font-weight: 500;
 }
-.menu__descripcion{
+@media(min-width:640px){
+    .menu__postres-sub-titulo{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        display: inline;
+        margin-left: 45px;
+  }
+}
+
+.menu__descripcion-aperitivos,
+.menu__descripcion-bebidas,
+.menu__descripcion-principales,
+.menu__descripcion-postres{
     width: 80%;
     height: 50px;
    margin-left: 40px;
+}
+@media(min-width:640px){
+.menu__descripcion-aperitivos,
+.menu__descripcion-bebidas,
+.menu__descripcion-principales,
+.menu__descripcion-postres{
+        grid-row: 1/2;
+        grid-column: 2/3;
+        display: inline;
+        margin-top: 30px;
+
+    }
 }
 .menu__link{
     height: 55px;
