--- a/carousel-comp/carousel.css
+++ b/carousel-comp/carousel.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 85vh;
 }
-@media(min-width:666px){
+@media(min-width:640px){
     .carousel{
         width: 100%;
         height: 100%;
@@ -19,7 +19,7 @@
 .carousel__elemento{
     width: 100%;
 }
-@media(min-width:666px){
+@media(min-width:640px){
     .carousel__elemento {
         width: 100%;
         height: 100%;
@@ -37,7 +37,7 @@
     width: 375px;
     height: 85vh;
 }
-@media(min-width:666px){
+@media(min-width:640px){
     .carousel-img__1{
         width: 100%;
         height: 100%;
@@ -62,7 +62,7 @@
         border-radius: 15px;
     }
     .carousel__indicadores{
-        position: relative;
+        position: absolute;
        
     }
 }
