--- a/nav-comp/nav.css
+++ b/nav-comp/nav.css
@@ -83,11 +83,12 @@ margin-top: 5px;
     border-bottom: 4px solid #755959;
 }
 
-@media(min-width:666px){
+@media(min-width:640px){
     .header-nav{
         right: 30px;
         height: 200px;
-        width: 120px;
+        width: 100%;
+        height: 85vh;
     }
 }
 .header-nav__link{
